# py3DCORE

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
py3dcore/: __init__.py  _extcuda.py  _extmath.py  _extnumba.py  base.py  model.py  params.py  quaternions.py  rotqs.py  swbg.py  util.py
py3dcore/abc/: __init__.py  mode.py  rmse.py  smc.py
py3dcore/fitter/: __init__.py  abc_smc.py  base.py  sumstat.py
py3dcore/fitting/: __init__.py  fitter.py  util.py
py3dcore/fitting/methods/: __init__.py  abcsmc.py  abcsmc_psd.py  abcsmc_v1.py  smc.py  summary.py
py3dcore/methods/: __init__.py  abc_smc.py  data.py  method.py
py3dcore/models/: __init__.py
py3dcore/models/distorted/: __init__.py  distorted_shape.py  parameters.json
py3dcore/models/dt2/: __init__.py  distorted_shape.py  parameters.json
py3dcore/models/dt_hel/: __init__.py  distorted_shape.py
py3dcore/models/spline/: __init__.py  csplines.py  parameters.json  swbg.py
py3dcore/models/thin_torus_gh/: __init__.py  coordinates.py  magfield.py  propagation.py
py3dcore/models/thin_torus_nc/: __init__.py  coordinates.py  magfield.py
py3dcore/models/toroidal/: __init__.py  parameters.json  thin_torus.py
py3dcore/models/torus_gh/: __init__.py  coordinates.py  magfield.py
py3dcore/models/ttghv0/: __init__.py  coordinates.py  magfield.py  parameters.json  propagation.py
py3dcore/models/ttghv1/: __init__.py  coordinates.py  magfield.py
py3dcore/models/ttghv2/: __init__.py  magfield.py
py3dcore/models/ttghv2t/: __init__.py  magfield.py  parameters.json
py3dcore/models/ttghv3/: __init__.py  coordinates.py  magfield.py  parameters.json  propagation.py
py3dcore/models/ttncv2/: __init__.py  coordinates.py  magfield.py  parameters.json  propagation.py
py3dcore/raytracing/: __init__.py  raytracing.py
