[metadata]
name = 3DCORE
author = Andreas J. Weiss
author_email = ajefweiss@gmail.com
description = Python implementations of the class of models running under the name "3D Coronal Rope Ejection Model"
url = https://github.com/ajefweiss/py3DCORE
version = attr: py3dcore.__version__
keywords =
    astrophysics
    solar physics
    space weather
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.9
install_requires =
    heliosat[NUMBA]
    numba
    numpy
    scipy
    spiceypy>=5.1.2
